# unity_audio_synth

./: Assembly-CSharp.csproj  README.md  SynthTest.sln  unity_audio_synth.sln
Assets/cpp/LibStk/: CMakeLists.txt
Assets/cpp/LibStk/doc/html/: ADSR_8h_source.html  Asymp_8h_source.html  BandedWG_8h_source.html  BeeThree_8h_source.html  BiQuad_8h_source.html  BlitSaw_8h_source.html  BlitSquare_8h_source.html  Blit_8h_source.html  BlowBotl_8h_source.html  BlowHole_8h_source.html  BowTable_8h_source.html  Bowed_8h_source.html  Brass_8h_source.html  Chorus_8h_source.html  Clarinet_8h_source.html  Cubic_8h_source.html  DelayA_8h_source.html  DelayL_8h_source.html  Delay_8h_source.html  Drummer_8h_source.html  Echo_8h_source.html  Effect_8h_source.html  Envelope_8h_source.html  FM_8h_source.html  (+370 more)
Assets/cpp/LibStk/include/: Mutex.h  RtAudio.h  RtWvOut.h  SineWave.h  Stk.h  Thread.h  UdpSocket.h
Assets/cpp/LibStk/src/: InetWvIn.cpp  RtAudio.cpp  RtWvOut.cpp  SineWave.cpp  Socket.cpp  TcpClient.cpp  TcpServer.cpp  UdpSocket.cpp
Assets/cpp/TestLibrary/: CMakeLists.txt  Talker.cpp  Talker.h  library.cpp  library.h
Assets/cpp/TestLibrary/includes/: CXX.includecache  DependInfo.cmake  Makefile  Makefile 2  Makefile 3  Makefile 4  Makefile 5  Makefile 6  Makefile 7  Messager_8h_source.html  Mutex.h  RtWvIn_8h_source.html  annotated.html  build.make  classes.html  classstk_1_1Mutex-members.html  classstk_1_1Mutex.html  cmake_clean.cmake  depend.internal  depend.make  dir_d44c64559bbebec7f509842c48db8b23.html  functions_0x6c.html  functions_0x73.html  functions_0x75.html  functions_0x77.html  functions_0x7e.html  functions_func_0x6c.html  functions_func_0x6d.html  functions_func_0x75.html  functions_func_0x7e.html  link.txt  namespacestk.html  usage.html
(+5 files in other folders)
